--- a/package.json
+++ b/package.json
@@ -8,19 +8,26 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.3",
+    "@rails/webpacker": "^5.4.4",
+    "axios": "^1.3.4",
+    "glob-parent": "^6.0.2",
+    "global": "^4.4.0",
     "jquery": "^3.6.4",
+    "npm-check-updates": "^16.7.12",
+    "nth-check": "^2.0.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
     "@webpack-cli/serve": "^2.0.1",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^6.0.1",
     "webpack": "^5.76.2",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.9.2"
   },
   "resolutions": {
-    "glob-parent": "^5.1.2",
+    "glob-parent": "^6.0.2",
     "nth-check": "^2.0.1"
   }
 }
