--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
+    "@rails/actiontext": "^7.0.4-3",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^5.4.4",
@@ -15,16 +16,17 @@
     "jquery": "^3.6.4",
     "npm-check-updates": "^16.7.12",
     "nth-check": "^2.0.1",
+    "trix": "^2.0.4",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "@webpack-cli/serve": "^2.0.1",
+    "@webpack-cli/serve": "^1.0.0",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
-    "webpack": "^5.76.2",
-    "webpack-cli": "^5.0.1",
-    "webpack-dev-server": "^4.9.2"
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.0.0",
+    "webpack-dev-server": "^4.13.1"
   },
   "resolutions": {
     "glob-parent": "^6.0.2",
