--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@rails/actiontext": "^7.0.4-3",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "^5.4.4",
+    "@rails/webpacker": "5.4.4",
     "axios": "^1.3.4",
     "glob-parent": "^6.0.2",
     "global": "^4.4.0",
@@ -25,8 +25,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "webpack": "^4.46.0",
-    "webpack-cli": "^4.0.0",
-    "webpack-dev-server": "^4.13.1"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3"
   },
   "resolutions": {
     "glob-parent": "^6.0.2",
