--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.6.4",
     "npm-check-updates": "^16.7.12",
     "nth-check": "^2.0.1",
+    "rails-ujs": "^5.2.8-1",
     "trix": "^2.0.4",
     "turbolinks": "^5.2.0"
   },
